process refactor argos4j and add remote file collection